--- a/l10n.toml
+++ b/l10n.toml
@@ -5,8 +5,8 @@
 basepath = "."
 
 [env]
-    l = "{l10n_base}/locales/{locale}/"
+    l = "{l10n_base}/locales/{locale}"
 
 [[paths]]
-    reference = "locales/templates/**"
-    l10n = "{l}**"
+    reference = "locales/templates/message.po"
+    l10n = "{l}/message.po"
